--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A JavaScript Kubewarden policy template",
   "main": "src/index.js",
   "scripts": {
-    "build": "make build",
+    "build": "webpack",
     "test": "jest",
     "e2e": "bats e2e.bats",
     "format": "prettier --write .",
@@ -17,6 +17,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^24.2.0",
     "jest": "^30.0.5",
+    "kubernetes-types": "^1.30.0",
     "prettier": "^3.6.2",
     "ts-jest": "^29.4.1",
     "ts-loader": "^9.5.2",
