--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
     "webpack": "^5.x.x",
-    "webpack-cli": "^5.x.x"
+    "webpack-cli": "^5.1.4"
   },
   "keywords": [
     "kubewarden",
