--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack",
-    "test": "jest",
-    "e2e": "bats e2e.bats",
+    "test": "bats e2e.bats",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
