--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A JavaScript Kubewarden policy template",
   "main": "src/index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "npx webpack --config webpack.config.cjs",
     "test": "bats e2e.bats",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
